<resources>
    <string name="app_name">TimeApp</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="username_header">Username</string>
    <string name="password_header">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">(123)456–7980</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirmpassword_hint">Confirm Password</string>
    <string name="welcome">Welcome!</string>
    <string name="RUin">You are not logged in.</string>
    <string name="MatchingUserHeader">Locations</string>
    <string name="ReturnToSearch">Return To Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="fresh_config" />
    <string name="invite_menu_label" />
    <string name="cause_crash" />
    <string name="chat">Chat</string>
    <string name="sendButtonText">Send</string>
    <string name="bListings">Go To Listings</string>
    <string name="eventdefaultname">eventdefaultname</string>

</resources>
